--- a/style.css
+++ b/style.css
@@ -82,8 +82,6 @@ header {
 }
 
 
-
-
 header h1 {
   font-size: 2.2rem;
   margin: 0;
@@ -97,6 +95,10 @@ main {
   margin: auto;
   max-width: 1000px;
   padding: 2rem;
+}
+
+.bio-h2 {
+  border-bottom: none !important;
 }
 
 main h2 {
